fix error-tab overflow

--- a/src/components/error-tab/error-tab.css
+++ b/src/components/error-tab/error-tab.css
@@ -3,4 +3,8 @@
   justify-content: center;
   align-items: center;
   max-height: 30vh;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -webkit-scrollbar: none;
+  -ms-overflow-style: none;
 }
